# RDM_Project

./: .gitignore  README.md
Experiment/: GenerateTask_list  PriorPD.pth  PriorSalienceRDM_Exp.py  PriorSalienceRDM_Exp_short.py  Psychopy_test.py  Psychopy_test_module.py  README.md  dot_stimuli.py  hi.py  item_struct.py  params.py  trial_writer.py
Experiment/PriorPD/: __init__.py
Experiment/Task_func/: item_struct.py
Experiment/TwoDotRDM/: dot_stimuli.py
Experiment/informed_RDM/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Experiment/informed_RDM/docs/: Makefile  conf.py  example.ipynb  make.bat
Experiment/informed_RDM/src/informed_RDM/: GenerateTask_list  README.md  __init__.py
Experiment/informed_RDM/src/informed_RDM/PriorPD/Task_func/: item_struct.py  trial_writer.py
Experiment/informed_RDM/src/informed_RDM/PriorPD/TwoDotRDM/: dot_stimuli.py  error_catching.py
Experiment/informed_RDM/tests/: test_informed_RDM.py
Experiment/prior_rdm/: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Experiment/prior_rdm/docs/: Makefile  conf.py  example.ipynb  make.bat
Experiment/prior_rdm/src/: __init__.py
Experiment/prior_rdm/src/prior_rdm/: params.py
Experiment/prior_rdm/src/prior_rdm/PerceptEqiluminance/: HeterochromaticFlicker.py
Experiment/prior_rdm/src/prior_rdm/Task_func/: eeg_trigger.py  item_struct.py  item_struct_short.py  pseudo.py  trial_writer.py
Experiment/prior_rdm/src/prior_rdm/TwoDotRDM/: dot_stimuli.py
Experiment/prior_rdm/tests/: test_prior_rdm.py
(+5 files in other folders)
