[tool.poetry]
name = "informed_RDM"
version = "0.1.0"
description = "Psychopy random dot motion task where differently colored dots allow participants to use prior information to make perceptual decisions."
authors = ["Julius Kricheldorff"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.13"
PsychoPy = "^2021.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
