[tool.poetry]
name = "prior_rdm"
version = "0.1.0"
description = "Psychopy Experiment to implement a random dot motion kinematogram that requires participants to use prior information."
authors = ["Julius Kricheldorff"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
